--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -40,4 +40,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color
-        continue-on-error: true
+
+      - name: Terraform Apply
+        id: appply
+        run: terraform apply -auto-approve
