--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -15,6 +15,8 @@ jobs:
     defaults:
       run:
         working-directory: terraform/
+    outputs:
+      invoke_url: ${{steps.api-url.outputs.inovke_url}}
     steps:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
@@ -48,6 +50,36 @@ jobs:
         id: appply
         run: terraform apply -auto-approve
 
-      - name: Get API URL
-        id: api-url
-        run: echo "$(terraform output invoke_url)"
+      - name: Get Terraform Ouputs
+        id: tf-outputs
+        run: |
+          echo "inovke_url=$(terraform output invoke_url)" >> "$GITHUB_OUTPUT"
+          echo "s3_domain=$(terraform output static_s3_domain)" >> "$GITHUB_OUTPUT"
+  frontend:
+    runs-on: ubunutu-latest
+    needs: terraform
+    permissions:
+      id-token: write
+      contents: read
+    env:
+      INVOKEURL: ${{needs.terraform.outputs.invoke_url}}
+      S3DOMAIN: ${{needs.terraform.outputs.s3_domain}}
+    defaults:
+      run:
+        working-directory: src/
+    steps:
+      - uses: actions/checkout@v3
+      - uses: hashicorp/setup-terraform@v2
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
+          role-session-name: deploy-to-aws
+          aws-region: us-east-2
+      - name: Update js URL
+        id: js-api_url
+        run: sed -i -e 's/PLACEHOLDER/${{ env.INVOKEURL }}/' js/counter.js
+      - name: Upload site to s3
+        id: upload-to-s3
+        run: |
+          aws s3 sync ./ s3://${{env.S3DOMAIN}} --delete --follow-symlinks
+
