--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -52,9 +52,7 @@ jobs:
 
       - name: Get Terraform Ouputs
         id: tf-outputs
-        run: |
-          echo "inovke_url=$(terraform output -raw invoke_url)" >> "$GITHUB_OUTPUT"
-          echo "s3_domain=$(terraform output -raw static_s3_domain)" >> "$GITHUB_OUTPUT"
+        run: echo "inovke_url=$(terraform output -raw invoke_url)" >> "$GITHUB_OUTPUT" && echo "s3_domain=$(terraform output -raw static_s3_domain)" >> "$GITHUB_OUTPUT"
   frontend:
     runs-on: ubunutu-latest
     needs: terraform
