--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -52,12 +52,12 @@ jobs:
 
       - name: Set Invoke URL
         id: set-invoke-url
-        run: echo "inovke_url=$(terraform output -raw invoke_url)" >> "$GITHUB_OUTPUT"
+        run: echo "inovke_url=$(terraform output invoke_url)" >> "$GITHUB_OUTPUT"
 
       - name: Set Static S3 domain
         id: set-s3-domain
-        run: echo "s3_domain=$(terraform output -raw static_s3_domain)" >> "$GITHUB_OUTPUT"
-        
+        run: echo "s3_domain=$(terraform output static_s3_domain)" >> "$GITHUB_OUTPUT"
+
   frontend:
     runs-on: ubunutu-latest
     needs: terraform
