--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -19,9 +19,9 @@ jobs:
       invoke_url: ${{steps.api-url.outputs.inovke_url}}
     steps:
       - uses: actions/checkout@v3
-      - uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_wrapper: false
+      # - uses: hashicorp/setup-terraform@v2
+      #   with:
+      #     terraform_wrapper: false
       - uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
@@ -74,7 +74,6 @@ jobs:
         working-directory: src/
     steps:
       - uses: actions/checkout@v3
-      - uses: hashicorp/setup-terraform@v2
       - uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
