--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -31,59 +31,76 @@ jobs:
 
       - name: Terraform fmt
         id: fmt
+        working-directory: terraform/
         run: terraform fmt -check
         continue-on-error: true
 
       - name: Terraform Init
         id: init
+        working-directory: terraform/
         run: terraform init
 
       - name: Terraform Validate
         id: validate
+        working-directory: terraform/
         run: terraform validate -no-color
 
       - name: Terraform Plan
         id: plan
+        working-directory: terraform/
         run: terraform plan -no-color
 
       - name: Terraform Apply
         id: appply
+        working-directory: terraform/
         run: terraform apply -auto-approve
 
       - name: Set Invoke URL
         id: set-invoke-url
-        run: echo "inovke_url=$(terraform output invoke_url)" >> "$GITHUB_OUTPUT"
+        working-directory: terraform/
+        run: echo "INVOKE_URL=$(terraform output invoke_url)" >> "$GITHUB_ENV"
 
       - name: Set Static S3 domain
         id: set-s3-domain
-        run: echo "s3_domain=$(terraform output static_s3_domain)" >> "$GITHUB_OUTPUT"
+        working-directory: terraform/
+        run: echo "S3_DOMAIN=$(terraform output static_s3_domain)" >> "$GITHUB_env"
 
-      
-
-  frontend:
-    runs-on: ubunutu-latest
-    needs: terraform
-    permissions:
-      id-token: write
-      contents: read
-    env:
-      INVOKEURL: ${{needs.terraform.outputs.invoke_url}}
-      S3DOMAIN: ${{needs.terraform.outputs.s3_domain}}
-    defaults:
-      run:
-        working-directory: src/
-    steps:
-      - uses: actions/checkout@v3
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
-          role-session-name: deploy-to-aws
-          aws-region: us-east-2
       - name: Update js URL
         id: js-api_url
-        run: sed -i -e 's/PLACEHOLDER/${{ env.INVOKEURL }}/' js/counter.js
+        run: sed -i -e 's/PLACEHOLDER/${{ env.INVOKE_URL }}/' js/counter.js
+        
       - name: Upload site to s3
         id: upload-to-s3
         run: |
-          aws s3 sync ./ s3://${{env.S3DOMAIN}} --delete --follow-symlinks
+          aws s3 sync ./ s3://${{env.S3_DOMAIN}} --delete --follow-symlinks
+
+
+      
+
+  # frontend:
+  #   runs-on: ubunutu-latest
+  #   needs: terraform
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   env:
+  #     INVOKEURL: ${{needs.terraform.outputs.invoke_url}}
+  #     S3DOMAIN: ${{needs.terraform.outputs.s3_domain}}
+  #   defaults:
+  #     run:
+  #       working-directory: src/
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: aws-actions/configure-aws-credentials@v2
+  #       with:
+  #         role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
+  #         role-session-name: deploy-to-aws
+  #         aws-region: us-east-2
+  #     - name: Update js URL
+  #       id: js-api_url
+  #       run: sed -i -e 's/PLACEHOLDER/${{ env.INVOKEURL }}/' js/counter.js
+  #     - name: Upload site to s3
+  #       id: upload-to-s3
+  #       run: |
+  #         aws s3 sync ./ s3://${{env.S3DOMAIN}} --delete --follow-symlinks
 
