--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -58,12 +58,12 @@ jobs:
       - name: Set Invoke URL
         id: set-invoke-url
         working-directory: terraform/
-        run: echo "INVOKE_URL=$(terraform output invoke_url)" >> "$GITHUB_ENV"
+        run: echo "INVOKE_URL=$(terraform output -raw invoke_url)" >> "$GITHUB_ENV"
 
       - name: Set Static S3 domain
         id: set-s3-domain
         working-directory: terraform/
-        run: echo "S3_DOMAIN=$(terraform output static_s3_domain)" >> "$GITHUB_ENV"
+        run: echo "S3_DOMAIN=$(terraform output -raw static_s3_domain)" >> "$GITHUB_ENV"
 
       - name: Update js URL
         id: js-api_url
