--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -66,13 +66,15 @@ jobs:
         run: echo "S3_DOMAIN=$(terraform output -raw static_s3_domain)" >> "$GITHUB_ENV"
 
       - name: Update js URL
+        working-directory: src/
         id: js-api_url
-        run: sed -i -e 's&PLACEHOLDER&${{ env.INVOKE_URL }}&' src/js/counter.js
+        run: sed -i -e 's&PLACEHOLDER&${{ env.INVOKE_URL }}&' js/counter.js
 
       - name: Upload site to s3
+        working-directory: src/
         id: upload-to-s3
         run: |
-          aws s3 sync ./src s3://${{env.S3_DOMAIN}} --delete --follow-symlinks
+          aws s3 sync ./ s3://${{env.S3_DOMAIN}} --delete --follow-symlinks
 
 
       
