--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -61,11 +61,17 @@ jobs:
         id: js-api_url
         run: sed -i -e 's&PLACEHOLDER&${{ env.INVOKE_URL }}&' src/js/counter.js
 
+      - name: Configure AWS credentials for account
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::318339346456:role/OrganizationAccountAccessRole
+          aws-region: us-east-2
+
       - name: Upload site to s3
         working-directory: frontend/
         id: upload-to-s3
         run: |
-          aws s3 sync ./src s3://${{env.S3_ID}} --delete --follow-symlinks
+          aws s3 sync ./src s3://${{ env.S3_ID }} --delete --follow-symlinks
 
 
       
