--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -2,6 +2,9 @@ name: Deploy PR for Testing
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - '!main'
   pull_request:
     branches:
       - main
