--- a/.github/workflows/deploy_branch.yml
+++ b/.github/workflows/deploy_branch.yml
@@ -98,3 +98,5 @@ jobs:
         env:
           CYPRESS_BASE_URL: ${{ needs.deploy.outputs.website_url }}
         uses: cypress-io/github-action@v5
+        with:
+          working-directory: frontend/
