--- a/.github/workflows/deploy_branch.yml
+++ b/.github/workflows/deploy_branch.yml
@@ -105,10 +105,10 @@ jobs:
         # if: failure()
         with:
           name: cypress-screenshots
-          path: cypress/screenshots
+          path: frontend/cypress/screenshots
           if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
       - uses: actions/upload-artifact@v3
         with:
           name: cypress-videos
-          path: cypress/videos
+          path: frontend/cypress/videos
           if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
