--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -5,6 +5,7 @@ jobs:
     if: github.event.ref_type == 'branch'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Select TF Workspace
         run: terraform workspace select ${{ github.event.ref }}
       - name: Destroy resources
