--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -4,6 +4,9 @@ jobs:
   delete:
     if: github.event.ref_type == 'branch'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform/
     steps:
       - uses: actions/checkout@v3
       - name: Select TF Workspace
