--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -4,6 +4,9 @@ jobs:
   delete:
     if: github.event.ref_type == 'branch'
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     defaults:
       run:
         working-directory: terraform/
