--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Select TF Workspace
         run: terraform workspace select ${{ github.event.ref }}
       - name: Destroy resources
-        run: terraform destroy
+        run: terraform destroy -auto-approve
       - name: delete TF Workspace
         run: |
           terraform workspace select default
