--- a/.github/workflows/deploy_branch.yml
+++ b/.github/workflows/deploy_branch.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
+          role-to-assume: arn:aws:iam::784714698706:role/github-actions-kyle.mn
           role-session-name: deploy-to-aws
           aws-region: us-east-2
       - name: Set Branch Name
