--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::784714698706:role/TEMP-GH-ACTIONS
+          role-to-assume: arn:aws:iam::784714698706:role/github-actions-kyle.mn
           role-session-name: delete-branch
           aws-region: us-east-2
       - name: Terraform init
