variables for aws role & s3 force destroy

--- a/.github/workflows/on_branch_delete.yml
+++ b/.github/workflows/on_branch_delete.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Select TF Workspace
         run: terraform workspace select ${{ github.event.ref }}
       - name: Destroy resources
-        run: terraform destroy -auto-approve
+        run: terraform destroy -auto-approve -var-file="development.tfvars"
       - name: delete TF Workspace
         run: |
           terraform workspace select default
