--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -22,7 +22,7 @@ jobs:
           aws-region: us-east-2
       - name: Set Branch Name
         run: |
-            echo "GH_BRANCH_NAME=${{github.ref_name}}" >> "$GITHUB_ENV"
+            echo "GH_BRANCH_NAME=${{github.head_ref}}" >> "$GITHUB_ENV"
             echo ${{ env.GH_BRANCH_NAME }}
 
       - name: Terraform fmt
