--- a/.github/workflows/plan_pr.yml
+++ b/.github/workflows/plan_pr.yml
@@ -32,10 +32,17 @@ jobs:
         run: terraform workspace select main
         working-directory: terraform/
 
+      - name: Terraform Format
+        id: fmt
+        working-directory: terraform/
+        run: terraform fmt -check
+        continue-on-error: true
+
       - name: Terraform Validate
         id: validate
         working-directory: terraform/
         run: terraform validate
+        continue-on-error: true
   
       - name: Terraform Plan
         id: plan
