--- a/.github/workflows/deploy_branch.yml
+++ b/.github/workflows/deploy_branch.yml
@@ -21,8 +21,7 @@ jobs:
           role-to-assume: arn:aws:iam::784714698706:role/github-actions-kyle.mn
           role-session-name: deploy-to-aws
           aws-region: us-east-2
-      - name: Set Branch Name
-        run: echo "GH_BRANCH_NAME=$(git branch --show-current)" >> "$GITHUB_ENV"
+      - uses: hashicorp/setup-terraform@v2
 
       - name: Terraform fmt
         id: fmt
@@ -37,7 +36,7 @@ jobs:
 
       - name: Set terraform workspace
         id: tf-workspace
-        run: terraform workspace select -or-create ${{env.GH_BRANCH_NAME}}
+        run: terraform workspace select -or-create ${{ github.ref_name }}
         working-directory: terraform/
 
       - name: Terraform Validate
@@ -48,28 +47,28 @@ jobs:
       - name: Terraform Plan
         id: plan
         working-directory: terraform/
-        run: terraform plan -no-color -var="full_domain=${{env.GH_BRANCH_NAME}}.kyle.mn" -var-file="development.tfvars"
+        run: terraform plan -no-color -var="full_domain=${{ github.ref_name }}.kyle.mn" -var-file="development.tfvars"
 
       - name: Terraform Apply
         if:
         id: apply
         working-directory: terraform/
-        run: terraform apply -auto-approve -var="full_domain=${{env.GH_BRANCH_NAME}}.kyle.mn" -var-file="development.tfvars"
+        run: terraform apply -auto-approve -var="full_domain=${{ github.ref_name }}.kyle.mn" -var-file="development.tfvars"
 
       - name: Set Invoke URL
         id: set-invoke-url
         working-directory: terraform/
-        run: echo "INVOKE_URL=$(terraform output -raw invoke_url)" >> "$GITHUB_ENV"
+        run: echo "INVOKE_URL=$(terraform-bin output -raw invoke_url)" >> "$GITHUB_ENV"
 
       - name: Set Static S3 domain
         id: set-s3-domain
         working-directory: terraform/
-        run: echo "S3_ID=$(terraform output -raw static_s3_id)" >> "$GITHUB_ENV"
+        run: echo "S3_ID=$(terraform-bin output -raw static_s3_id)" >> "$GITHUB_ENV"
 
       - name: Set website root URL
         id: set-website-url
         working-directory: terraform/
-        run: echo "WEBSITE_URL=$(terraform output -raw website_root_url)" >> $GITHUB_OUTPUT
+        run: echo "WEBSITE_URL=$(terraform-bin output -raw website_root_url)" >> $GITHUB_OUTPUT
 
       - name: Update js URL
         working-directory: frontend/
@@ -87,6 +86,9 @@ jobs:
         id: upload-to-s3
         run: |
           aws s3 sync ./src s3://${{ env.S3_ID }} --delete --follow-symlinks
+      
+      - name: Show URL
+        run: echo "Deployed at ${{ steps.set-website-url.outputs.WEBSITE_URL }}"
 
   cypress-run:
     runs-on: ubuntu-22.04
