--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -2,7 +2,7 @@ name: Deploy PR to Staging
 
 on:
   pull_request:
-    types: [reopened, opened, synchronize, edited]        
+    types: [reopened, opened, synchronize, edited]
 
 jobs:
   deploy:
@@ -19,7 +19,7 @@ jobs:
           role-to-assume: arn:aws:iam::784714698706:role/github-actions-kyle.mn
           role-session-name: deploy-to-aws
           aws-region: us-east-2
-      
+
       - uses: hashicorp/setup-terraform@v2
 
       - name: Terraform fmt
@@ -64,6 +64,11 @@ jobs:
         working-directory: terraform/
         run: echo "S3_ID=$(terraform-bin output -raw static_s3_id)" >> "$GITHUB_ENV"
 
+      - name: Set Cloudfront Distribution ID
+        id: set-cf-id
+        working-directory: terraform/
+        run: echo "CF_ID=$(terraform-bin output -raw cloudfront_distro_id)" >> "$GITHUB_ENV"
+
       - name: Set website root URL
         id: set-website-url
         working-directory: terraform/
@@ -85,6 +90,8 @@ jobs:
         id: upload-to-s3
         run: |
           aws s3 sync ./src s3://${{ env.S3_ID }} --delete --follow-symlinks
+          aws cloudfront create-invalidation --distribution-id ${{ env.CF_ID }} --paths "/*"
+
 
       - name: Show URL
         run: echo "Deployed at ${{ steps.set-website-url.outputs.WEBSITE_URL }}" >> $GITHUB_STEP_SUMMARY
