--- a/.github/workflows/deploy_to_prod.yml
+++ b/.github/workflows/deploy_to_prod.yml
@@ -3,7 +3,7 @@ name: Deploy to prod
 on:
   push:
     branches:
-      - main    
+      - main
 
 jobs:
   deploy:
@@ -20,7 +20,7 @@ jobs:
           role-to-assume: arn:aws:iam::784714698706:role/github-actions-kyle.mn
           role-session-name: deploy-to-aws
           aws-region: us-east-2
-      
+
       - uses: hashicorp/setup-terraform@v2
 
       - name: Terraform fmt
@@ -65,6 +65,11 @@ jobs:
         working-directory: terraform/
         run: echo "S3_ID=$(terraform-bin output -raw static_s3_id)" >> "$GITHUB_ENV"
 
+      - name: Set Cloudfront Distribution ID
+        id: set-cf-id
+        working-directory: terraform/
+        run: echo "CF_ID=$(terraform-bin output -raw cloudfront_distro_id)" >> "$GITHUB_ENV"
+
       - name: Set website root URL
         id: set-website-url
         working-directory: terraform/
@@ -81,11 +86,12 @@ jobs:
           role-to-assume: arn:aws:iam::382878041746:role/github-actions-s3
           aws-region: us-east-2
 
-      - name: Upload site to s3
+      - name: Upload site to s3 and invalidate cache
         working-directory: frontend/
         id: upload-to-s3
         run: |
           aws s3 sync ./src s3://${{ env.S3_ID }} --delete --follow-symlinks
+          aws cloudfront create-invalidation --distribution-id ${{ env.CF_ID }} --paths "/*"
 
       - name: Show URL
         run: echo "Deployed at ${{ steps.set-website-url.outputs.WEBSITE_URL }}" >> $GITHUB_STEP_SUMMARY
